[추가] Jenkindfile 생성 CI/CD 구성을 위한 초기 단계